--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Toy Python implementation of Malfoy/bcalm
+python-bcalm
+============
+
+Toy Python implementation of the BCALM algorithm
+Original C++ code at https://github.com/Malfoy/bcalm
